[package]
name = "indexing_system"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web3 and blockchain
ethers = { version = "2.0", default-features = false, features = ["ws", "rustls"] }
alloy-primitives = "0.7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Configuration
config = "0.14"

# Utilities
hex = "0.4"
lazy_static = "1.4"
toml = "0.9.11"

[dev-dependencies]
mockall = "0.12"
testcontainers = "0.15"
tokio-test = "0.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)', 'cfg(tarpaulin_include)'] }

[lib]
name = "data_indexing_caching"
path = "src/lib.rs"
