[package]
name = "hello-world"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
stellarlend-amm = { path = "../amm" }
stellar-contract-utils = { version = "0.6.0" }
stellar-macros = { version = "0.6.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)', 'cfg(tarpaulin_include)'] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
